# cta

./: Cargo.toml  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: p0ly0qkvrps3pvmdih334amdn3ks0s81-source
src/: commands.rs  main.rs  parser.rs  state.rs
src/commands/: fun.rs  mod.rs  utility.rs
src/commands/config/: mod.rs  prefix.rs
src/commands/music/: join.rs  mod.rs  pause.rs  play.rs  queue.rs  skip.rs
src/config/: servers.rs
src/music/: queue.rs
src/parser/: argument.rs  command.rs  mod.rs  textcommand.rs
