[package]
name = "cta"
version = "0.1.0"
edition = "2021"

[dependencies]
twilight-gateway = "0.16"
twilight-http = "0.16"
twilight-standby = "0.16"
twilight-model = "0.16"
twilight-cache-inmemory = "0.16"

songbird = { version = "0.5", default-features = false, features = ["driver", "gateway", "twilight", "rustls", "tws"] }
symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5.2" }

bincode = "2.0.1"

tracing = "0.1"
tracing-subscriber = "0.3"

reqwest = "0.12.15"

anyhow = "1.0"

tokio = { version = "1.42.0", features = ["full"] }
